Fix overflow content and add content to portofolio

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,9 @@ html::-webkit-scrollbar-thumb {
 
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .poppins {
